--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -43,3 +43,20 @@
     }
   }
 }
+
+#sidebar-menu {
+
+  scroll-content {
+    display: flex;
+    flex-direction: column;
+
+    .first-block {
+      flex: 1;
+    }
+
+    .second-block {
+      margin-bottom: 0;
+      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.26);
+    }
+  }
+}
