--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,6 +8,7 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/homepage/homepage";
+@import "../pages/visit-report-list/visit-report-list";
 
 .summary {
   background-color: #fbfbdc;
