--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -70,8 +70,13 @@
 
   scroll-content {
 
-    ion-icon {
-      color: #6ba09b;
+    button {
+      font-weight: bold;
+      color: #333;
+
+      ion-icon {
+        color: #6ba09b;
+      }
     }
 
     .second-block {
