box-shadow em toolbar para android

--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -29,3 +29,7 @@
 // App Material Design Only Sass
 // --------------------------------------------------
 // CSS that should only apply to the Material Design app
+
+.cheguei-menu-toolbar, ion-navbar {
+  box-shadow: rgba(0,0,0,0.5) 0 1px 6px;
+}
