--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -30,6 +30,11 @@
 // --------------------------------------------------
 // CSS that should only apply to the Material Design app
 
+// <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+// body {
+//   font-family: "Montserrat", "Roboto", sans-serif !important;
+// }
+
 .cheguei-menu-toolbar, ion-navbar {
   box-shadow: rgba(0,0,0,0.5) 0 1px 6px;
 }
