--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,7 +10,7 @@
 @import "../pages/homepage/homepage";
 @import "../pages/visit-report-list/visit-report-list";
 
-.summary {
+.draft {
   background-color: #fbfbdc;
 }
 
@@ -42,7 +42,7 @@
     margin-right: 20px;
   }
 
-  .summary-avatar {
+  .draft-avatar {
     @extend .avatar;
     background: #ffd180;
     color: #775924;
