divisores em negrito

--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -40,5 +40,5 @@ $special-font-family: "Montserrat", "Roboto", sans-serif !important;
 ion-item-divider[light] {
   color: #444;
   background-color: #f4f4f4;
-  font-weight: 500;
+  font-weight: bold;
 }
