--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,6 +10,14 @@
 @import "../pages/homepage/homepage";
 @import "../pages/visit-report-list/visit-report-list";
 
+.cheguei-menu-toolbar {
+  font-family: $styleFont;
+
+  .toolbar-title {
+    text-transform: capitalize;
+  }
+}
+
 .draft {
   background-color: #fbfbdc;
 }
