--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,6 +9,7 @@
 
 @import "../pages/homepage/homepage";
 @import "../pages/visit-report-list/visit-report-list";
+@import "../pages/newReport/newReport";
 
 .cheguei-menu-toolbar {
   font-family: $styleFont;
