--- a/app/pages/homepage/homepage.scss
+++ b/app/pages/homepage/homepage.scss
@@ -17,7 +17,12 @@
     ion-item {
 
       ion-icon {
-        color: #6ba09b;
+        color: #555;
+      }
+
+      ion-label {
+        color: #666;
+        font-size: 0.9em;
       }
 
       ion-note {
