--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -50,7 +50,8 @@
 }
 
 .draft {
-  background-color: #fbfbdc;
+  background: #fdfdef;
+  border-right-color: #ffd180 !important;
 }
 
 .sub-list {
@@ -65,8 +66,11 @@
 }
 
 .report {
-  // border-bottom: 1px solid #DDD !important;
-  border-right: 8px solid #eacf6b;
+  border-right-style: solid;
+  border-right-color: #90cc28;
+  border-right-width: 8px !important;
+  padding-bottom: 10px;
+  color: #333;
 
   .avatar {
     background: #6dcc2a;
@@ -104,6 +108,7 @@
       .price {
         font-size: 1.2em;
         color: #000;
+        font-family: $styleFont;
       }
 
       .company {
@@ -114,6 +119,7 @@
 
     .right {
       text-align: right;
+      color: #333;
     }
   }
 }
@@ -121,9 +127,8 @@
 .selected-report {
   @extend .report;
 
-  border-right: 8px solid #6dcc2a !important;
-
   background: #ebf2ff;
+  border-right-color: #757575;
 
   .avatar {
     background: #757575;
