--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,7 +1,7 @@
 .login-page {
+  background: #ef5050;
 
   .login-slide {
-    background: #ef5050;
 
     ion-label[stacked] {
       color: #fff;
@@ -28,6 +28,7 @@
 
   .art-box {
     height: 100%;
+    background: #fff;
 
     ion-icon {
       font-size: 3em;
