--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,6 +11,7 @@
 @import "../pages/visit-report-list/visit-report-list";
 @import "../pages/newReport/newReport";
 @import "../pages/login/login";
+@import "../pages/graphs/graphs";
 
 .cheguei-menu-toolbar, .logo {
   font-family: $styleFont;
